tests/runner/src/snapshots/tlang_test_runner__tests__enums_pattern_matching_advanced_javascript@enums__pattern_matching_advanced.tlang.snap
---
source: tests/runner/src/main.rs
description: "Backend: javascript"
expression: "apply_redactions(&output, workspace_root)"
input_file: tests/enums/pattern_matching_advanced.tlang
---
file://[WORKSPACE_ROOT]/[eval1]:407
function eval(expr) {
         ^^^^

'eval' and 'arguments' cannot be used as a binding identifier in strict mode

SyntaxError: Unexpected eval or arguments in strict mode
    at compileSourceTextModule (node:internal/modules/esm/utils:349:16)
    at ModuleLoader.createModuleWrap (node:internal/modules/esm/loader:254:12)
    at node:internal/process/execution:324:29
    at asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:99:11)
    at Object.runEntryPointWithESMLoader (node:internal/modules/run_main:121:19)
    at evalTypeScriptModuleEntryPoint (node:internal/process/execution:318:47)
    at evalTypeScript (node:internal/process/execution:254:12)
    at node:internal/main/eval_stdin:51:5
    at Socket.<anonymous> (node:internal/process/execution:206:5)
    at Socket.emit (node:events:519:35)

Node.js v24.0.2
